--- a/MvcJqueryLogin/Views/Shared/_Layout.cshtml
+++ b/MvcJqueryLogin/Views/Shared/_Layout.cshtml
@@ -21,6 +21,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li class="active"><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
+                    <li><a href="@Url.Action("Add","User")">Uye Kayıt</a></li>
+                    <li><a href="@Url.Action("Login","User")">Üye Giriş</a></li>
+                    <li><a href="@Url.Action("List","User")">Üye Listesi</a></li>
+                    <li><a href="@Url.Action("LogOff","User")">Çıkış Yap</a></li>
                 </ul>
             </div>
         </div>
